# pkg/client/api/openapi.yaml
@@ -33,6 +33,74 @@ paths:
       summary: Ping PayGate
       tags:
       - Monitor
+  /configuration/transfers:
+    get:
+      description: Retrieve current config for the provided organization.
+      operationId: getConfiguration
+      parameters:
+      - description: Value used to separate and identify models
+        example: org342
+        explode: false
+        in: header
+        name: X-Organization
+        required: false
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrganizationConfiguration'
+          description: Configuration was successfully retrieved
+      summary: Get Configuration
+      tags:
+      - Configuration
+    put:
+      description: Update the config for the provided organization.
+      operationId: updateConfiguration
+      parameters:
+      - description: Value used to separate and identify models
+        example: org342
+        explode: false
+        in: header
+        name: X-Organization
+        required: false
+        schema:
+          type: string
+        style: simple
+      - description: Unique ID for Moov Company
+        example: co567
+        explode: false
+        in: header
+        name: X-Company
+        required: false
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrganizationConfiguration'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrganizationConfiguration'
+          description: Configuration was successfully updated
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Configuration was not updated, see error(s)
+      summary: Update Configuration
+      tags:
+      - Configuration
   /micro-deposits:
     post:
       description: Start micro-deposits for a Destination to validate.
@@ -426,6 +494,16 @@ components:
           $ref: '#/components/schemas/Destination'
       required:
       - destination
+    OrganizationConfiguration:
+      example:
+        companyIdentification: f6eddffd
+      properties:
+        companyIdentification:
+          description: company id for use in ACH Batch headers
+          example: f6eddffd
+          type: string
+      required:
+      - company
     MicroDeposits:
       example:
         amounts:
